[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pynteny"
version = "0.0.6"
description = "Synteny-aware hmm searches made easy in Python"
license = "Apache-2.0"
authors = ["Semidán Robaina Estévez <srobaina@ull.edu.es>"]
maintainers = ["Semidán Robaina Estévez <srobaina@ull.edu.es>"]
readme = "README.md"
homepage = "https://github.com/robaina/Pynteny"
repository = "https://github.com/robaina/Pynteny"
documentation = "https://robaina.github.io/Pynteny"
keywords = ["synteny", "hmm", "metagenomics", "bioinformatics", "hmmer"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Natural Language :: English"
]
packages = [
    { include = "pynteny", from = "src" },
]
include = [
    "src/pynteny/app/assets/*",
    "src/pynteny/app/assets/img/*",
    "src/pynteny/config.json"
]
[tool.poetry.dependencies]
python = "^3.8"
[tool.poetry.scripts]
pynteny = "pynteny.cli:main"
