[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pynteny"
version = "1.0.0"
description = "Synteny-aware hmm searches made easy in Python"
license = "Apache-2.0"
authors = ["Semidán Robaina Estévez <srobaina@ull.edu.es>"]
maintainers = ["Semidán Robaina Estévez <srobaina@ull.edu.es>"]
readme = "README.md"
homepage = "https://github.com/robaina/Pynteny"
repository = "https://github.com/robaina/Pynteny"
documentation = "https://robaina.github.io/Pynteny"
keywords = ["synteny", "hmm", "metagenomics", "bioinformatics", "hmmer"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Natural Language :: English"
]
packages = [
    { include = "pynteny", from = "src" },
]
include = [
    "src/pynteny/config.json"
]
[tool.poetry.dependencies]
python = "^3.8"
[tool.poetry.scripts]
pynteny = "pynteny.cli:main"

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # mccabe complexity
    "E999", # match statement is not yet supported
    "W605", # ASCII art, verbatim text
]

[tool.ruff.isort]
known-first-party = ["pynteny"]
